force-app/main/default/objects/ApexJobTracker__c/ApexJobTracker__c.object-meta.xml
<CustomObject>
    <description>This will keep track of all the batch jobs.</description>
    <label>Apex Job Tracker</label>
    <nameField>
        <displayFormat>AJT-{000000000}</displayFormat>
        <label>Apex Job Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Jobs Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>