force-app/main/default/objects/ApexJobTracker__c/fields/AppClassName__c.field-meta.xml
<CustomField>
    <fullName>AppClassName__c</fullName>
    <description>Application Class Name</description>
    <label>App Class Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>