force-app/main/default/objects/ApexJobTracker__c/fields/BatchProcessId__c.field-meta.xml
<CustomField>
    <fullName>BatchProcessId__c</fullName>
    <label>Batch Process Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>