force-app/main/default/objects/ApexJobTracker__c/fields/Id1__c.field-meta.xml
<CustomField>
    <fullName>Id1__c</fullName>
    <label>Id1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>