force-app/main/default/objects/ApexJobTracker__c/fields/Id2__c.field-meta.xml
<CustomField>
    <fullName>Id2__c</fullName>
    <label>Id2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>