force-app/main/default/objects/ApexJobTracker__c/fields/Id3__c.field-meta.xml
<CustomField>
    <fullName>Id3__c</fullName>
    <label>Id3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>