force-app/main/default/objects/ApexJobTracker__c/fields/IsFailureNotified__c.field-meta.xml
<CustomField>
    <fullName>IsFailureNotified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if batch retry failure notification alert is sent</description>
    <label>Is Failure Notified?</label>
    <type>Checkbox</type>
</CustomField>