force-app/main/default/objects/ApexJobTracker__c/fields/IsLongRunning__c.field-meta.xml
<CustomField>
    <fullName>IsLongRunning__c</fullName>
    <formula>AND((Now()- StartDateTime__c)*24*60 &gt; 0, TEXT(Status__c) &lt;&gt; &#39;Success&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsLongRunning</label>
    <type>Checkbox</type>
</CustomField>