force-app/main/default/objects/ApexJobTracker__c/fields/NumberofTries__c.field-meta.xml
<CustomField>
    <fullName>NumberofTries__c</fullName>
    <label>Number of Tries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>