force-app/main/default/objects/ApexJobTracker__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>ProjectService</fullName>
            </value>
            <value>
                <fullName>ProjectLocation</fullName>
            </value>
            <value>
                <fullName>Job</fullName>
            </value>
            <value>
                <fullName>JobAttemptWorker</fullName>
            </value>
            <value>
                <fullName>ProjectInvoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>