force-app/main/default/objects/ApexJobTracker__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Apply PB Credit</fullName>
            </value>
            <value>
                <fullName>Cancel Job</fullName>
            </value>
            <value>
                <fullName>Cancel Project</fullName>
            </value>
            <value>
                <fullName>Cancel ProjectLocation</fullName>
            </value>
            <value>
                <fullName>Cancel ProjectService</fullName>
            </value>
            <value>
                <fullName>Close Project</fullName>
            </value>
            <value>
                <fullName>Create Attempt</fullName>
            </value>
            <value>
                <fullName>Create Job Materials</fullName>
            </value>
            <value>
                <fullName>Create Jobs</fullName>
            </value>
            <value>
                <fullName>Create Labor Invoice</fullName>
            </value>
            <value>
                <fullName>Create Product Invoice</fullName>
            </value>
            <value>
                <fullName>Create SalesTax Invoice</fullName>
            </value>
            <value>
                <fullName>Delete AllProjectJobs</fullName>
            </value>
            <value>
                <fullName>Delete Job</fullName>
            </value>
            <value>
                <fullName>Delete Project</fullName>
            </value>
            <value>
                <fullName>Delete ProjectLocation</fullName>
            </value>
            <value>
                <fullName>Delete ProjectService</fullName>
            </value>
            <value>
                <fullName>Import JobAttemptWorkers</fullName>
            </value>
            <value>
                <fullName>Import Jobs</fullName>
            </value>
            <value>
                <fullName>Import ProjectLocations</fullName>
            </value>
            <value>
                <fullName>Launch Project</fullName>
            </value>
            <value>
                <fullName>Schedule ProjectLocation</fullName>
            </value>
            <value>
                <fullName>Schedule ProjectService</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>