force-app/main/default/objects/ApexJobTracker__c/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <description>This will hold the job specific parameters for the apex job execution.</description>
    <inlineHelpText>This will hold the job specific parameters for the apex job execution.</inlineHelpText>
    <label>Parameters</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>