force-app/main/default/objects/ApexJobTracker__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <description>Attachment Parent ID</description>
    <label>Parent Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>