force-app/main/default/objects/ApexJobTracker__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Apex Jobs Tracker</relationshipLabel>
    <relationshipName>Apex_Jobs_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>